--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,25 @@ body {
 #Plein {
     background-color: transparent;
 }
+
+#Disponible_item {
+    background-color: transparent;
+}
+#Tri_item {
+    background-color: crimson;
+}
+#Plein_item {
+    background-color: transparent;
+}
+
+#preview {
+    width: 300px;
+    height: 300px;
+    border: 1px solid #000;
+}
+#result {
+    margin-top: 20px;
+    padding: 10px;
+    border: 1px solid #000;
+    background-color: #fff;
+}
